--- a/BlunoBasicDemo/app/src/main/res/layout/activity_main.xml
+++ b/BlunoBasicDemo/app/src/main/res/layout/activity_main.xml
@@ -11,92 +11,46 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
-        android:layout_below="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/serialSendText">
-
-        <TextView
-            android:id="@+id/serialReveicedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textSize="10sp"
-            android:layout_below="@+id/editText2"
-            android:layout_alignStart="@+id/editText2"
-            android:layout_alignEnd="@+id/serialSendText"
-            android:layout_alignParentBottom="true" />
-    </ScrollView>
-
     <Button
         android:id="@+id/buttonSerialSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/serialSendText"
-        android:layout_alignRight="@+id/serialSendText"
+        android:layout_above="@id/seekBarLeft"
+        android:layout_alignParentEnd="true"
         android:text="Send Data" />
 
     <SeekBar
         android:id="@+id/seekBarLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
-        android:layout_below="@+id/serialSendText"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/buttonScan"
         android:max="512"/>
     <SeekBar
         android:id="@+id/seekBarRight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/seekBarLeft"
         android:max="512"/>
     <TextView
-        android:id="@+id/editTextPower"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewDebug"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/seekBarRight"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:text=" "
-        android:textSize="25sp" />
-
-    <TextView
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
-        android:layout_below="@+id/editTextPower"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:text="Received Data:"
-        android:textSize="25sp" />
-
-    <EditText
-        android:id="@+id/serialSendText"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/buttonScan"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
-        android:background="#555555"
-        android:bufferType="editable"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Data sending Area"
-        android:textColor="#999999"
-        android:textSize="20dip" />
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/buttonScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serialSendText"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="Scan" />
+
 
 </RelativeLayout>
